--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
     <title>my cool website!!!</title>
 </head>
 <body>
-    <h1>Herman Chen</h1>
     <p>hello world!</p>
+    <div style="width: 100%; display: table;">
+        <div style="display: table-row">
+            <div style="display: table-cell;">
+                <p>hiiiiii!!!! :3 </p>
+                <p>my name is herman chen. I live in Massachusetts. I really like CS!!! </p>
+                <p>my github: https://github.com/herman08chen</p>
+                <p> &#60;3 </p>
+            </div>
+            <div style="display: table-cell;">
+                <p></p>
+                <p>my favorite programming language is c++. </p>
+                <p>my favorite artists are 2pac, lil wayne, nas, eminem, and 50 cent</p>
+                <p>i like biking but right now it is too cold to bike :&#40;&#40;&#40;  </p>
+            </div>
+
+        </div>
+    </div>
+    
 
 </body>
 </html>
