--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <p>hello world!</p>
     <div style="width: 100%; display: table;">
         <div style="display: table-row">
-            <div style="display: table-cell;">
+            <div style="border: 10px; width: 200px; display: table-cell;">
                 <p>hiiiiii!!!! :3 </p>
                 <p>my name is herman chen. I live in Massachusetts. I really like CS!!! </p>
                 <p>my github: https://github.com/herman08chen</p>
                 <p> &#60;3 </p>
             </div>
-            <div style="display: table-cell;">
+            <div style="border: 10px; width: 200px; display: table-cell;">
                 <p></p>
                 <p>my favorite programming language is c++. </p>
                 <p>my favorite artists are 2pac, lil wayne, nas, eminem, and 50 cent</p>
