--- a/index.html
+++ b/index.html
@@ -7,27 +7,41 @@
 </head>
 <body>
     <div style="display: flex; justify-content: center; align-items: center; ">
-        <div style="width: 800px; background-size: 100% auto; background-position: center; background-image: url('vjqtg70gay4a1.png'); background-size: cover; background-position: center;">
+        <div style="width: 1200px; background-size: 100% auto; background-position: center; background-image: url('img/vjqtg70gay4a1.png'); background-size: cover; background-position: center;">
             <div style="display: table;">
                 <div style="display: table-row">
-                    <div style="background-color: rgba(249, 129, 255, 0.3); margin: 20px; padding: 10px; border: 3px solid; width: 400px; display: table-cell;">
-                        <p>hiiiiii!!!! :3 </p>
-
-                        <p>my name is herman chen. I live in Massachusetts. I really like CS!!! i am 16 years old and im in 11th grade</p>
-                        <p> &#60;3 </p>
+                    <div style="width: 500px; display: table-cell;">
+                        <div style="background-color: rgba(247, 95, 255, 0.91); margin: 20px; padding: 10px; border: 3px solid; ">
+                            <p>hiiiiii!!!! :3 </p>
+    
+                            <p>my name is herman chen. I live in Massachusetts. I really like CS!!! i am 16 years old and im in 11th grade</p>
+                            <p> &#60;3 </p>
+                        </div>
                     </div>
-                    <div style="background-color: rgba(80, 198, 248, 0.3);margin: 20px; padding: 10px; border: 3px solid; width: 400px; display: table-cell;">
-                        <p></p>
-                        <p>my favorite programming language is c++. i think rust is way too hard. it hurts my brain!!!!! </p>
-                        <p>my favorite artists are 2pac, lil wayne, nas, eminem, and 50 cent</p>
-                        <p>i like biking but right now it is too cold to bike :&#40;&#40;&#40;  </p>
-                        <p>i think lowriders are really freakin cool</p>
-                        <p> al gore should run for president he seems pretty cool</p>
-                        <p>my github: https://github.com/herman08chen</p>
-                        <br>
-                        <p>here are some cool pictures i have:</p>
+                    <div style="width: 700px; display: table-cell;">
+                        <div style="background-color: rgba(249, 129, 255, 0.786); margin: 20px; padding: 10px; border: 3px solid; ">
+                            <p>my favorite programming language is c++. i think rust is way too hard. it hurts my brain!!!!! </p>
+                            <p>my favorite artists are 2pac, lil wayne, nas, eminem, and 50 cent</p>
+                            <p>i like biking but right now it is too cold to bike :&#40;&#40;&#40;  </p>
+                            <p>i think lowriders are really freakin cool</p>
+                            <p> al gore should run for president he seems pretty cool</p>
+                            <p>my github: https://github.com/herman08chen</p>
+                        </div>
+                        <div style="background-color: rgba(249, 129, 255, 0.786); margin: 20px; padding: 10px; border: 3px solid; ">
+                            <p>here are some cool pictures i have:</p>
+                            <div class="row">
+                                <div class="column">
+                                    <img src="img/IMG_20221227_111946.jpg" width="200"> 
+                                    <img src="img/RDT_20240715_0836367872861584662526505.jpg" width="200"> 
+                                    <img src="img/RDT_20241209_1950566257303972331800567.jpg" width="200"> 
+                                </div>
+                                <div class="column">
+                                    <img src="img/RDT_20241109_1335116673975196353068202.gif" width="200"> 
+                                    <img src="img/IMG_20241217_161446.jpg" width="200"> 
+                                </div>
+                            </div>
+                        </div>
                     </div>
-        
                 </div>
             </div>
         </div>
