--- a/index.html
+++ b/index.html
@@ -13,18 +13,27 @@
                     <div style="width: 500px; display: table-cell;">
                         <div style="background-color: rgba(247, 95, 255, 0.91); margin: 20px; padding: 10px; border: 3px solid; ">
                             <p>hiiiiii!!!! :3 </p>
-    
-                            <p>my name is herman chen. I live in Massachusetts. I really like CS!!! i am 16 years old and im in 11th grade</p>
+                            <p>pretend there is an image of me here :3</p>
+                            
                             <p> &#60;3 </p>
                         </div>
                     </div>
                     <div style="width: 700px; display: table-cell;">
                         <div style="background-color: rgba(249, 129, 255, 0.786); margin: 20px; padding: 10px; border: 3px solid; ">
+                            <p>
+                                my name is herman chen. I live in Massachusetts. I really like CS!!! i am 16 years old and im in 11th grade. 
+                                im scared about applying to college and going to college. i really hope i dont fumble my applications. 
+                                thankfully there is still quite a few months before i have to start my applications. right now im just trying not to fumble my grades :3
+                                my dad says i need show off some of my cs projects but i havent made anything very important because im a lazy bum :3. 
+                                i wish i wouldnt give up when im halfway done. i guess this website is my first serious attempt at making something i can show the world.
+                                i hope you like it!
+                            </p>
                             <p>my favorite programming language is c++. i think rust is way too hard. it hurts my brain!!!!! </p>
                             <p>my favorite artists are 2pac, lil wayne, nas, eminem, and 50 cent</p>
-                            <p>i like biking but right now it is too cold to bike :&#40;&#40;&#40;  </p>
+                            <p>i like biking but right now it is too cold to bike :&#40;&#40;&#40;. the roads are also really scary !!!</p>
                             <p>i think lowriders are really freakin cool</p>
                             <p> al gore should run for president he seems pretty cool</p>
+                            <p>im a lil queer :3</p>
                             <p>my github: https://github.com/herman08chen</p>
                         </div>
                         <div style="background-color: rgba(249, 129, 255, 0.786); margin: 20px; padding: 10px; border: 3px solid; ">
