--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                             
                             <p> &#60;3 </p>
                         </div>
+                        <div style="background-color: rgba(247, 95, 255, 0.91); margin: 20px; padding: 10px; border: 3px solid; ">
+                            <p>my github: https://github.com/herman08chen</p>
+                            <p>email: herman08chen@gmail.com</p>
+                        </div>
                     </div>
                     <div style="width: 700px; display: table-cell;">
                         <div style="background-color: rgba(249, 129, 255, 0.786); margin: 20px; padding: 10px; border: 3px solid; ">
@@ -34,7 +38,8 @@
                             <p>i think lowriders are really freakin cool</p>
                             <p> al gore should run for president he seems pretty cool</p>
                             <p>im a lil queer :3</p>
-                            <p>my github: https://github.com/herman08chen</p>
+                            <p>today i watched The Italian Job and i really liked it.</p>
+                            <p>is this how myspace looked like back in the stone age</p>
                         </div>
                         <div style="background-color: rgba(249, 129, 255, 0.786); margin: 20px; padding: 10px; border: 3px solid; ">
                             <p>here are some cool pictures i have:</p>
