ronald regan the actor

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                         <div style="background-color: rgba(247, 95, 255, 0.91); margin: 20px; padding: 10px; border: 3px solid; ">
                             <p>hiiiiii!!!! :3 </p>
                             <p>pretend there is an image of me here :3</p>
-                            
+                            <img src="img/RDT_20240411_2205243765507640416399883.jpg" width="400px">
                             <p> &#60;3 </p>
                         </div>
                         <div style="background-color: rgba(247, 95, 255, 0.91); margin: 20px; padding: 10px; border: 3px solid; ">
@@ -40,6 +40,7 @@
                             <p>im a lil queer :3</p>
                             <p>today i watched The Italian Job and i really liked it.</p>
                             <p>is this how myspace looked like back in the stone age</p>
+                            <p>ronal reagan should kill himself</p>
                         </div>
                         <div style="background-color: rgba(249, 129, 255, 0.786); margin: 20px; padding: 10px; border: 3px solid; ">
                             <p>here are some cool pictures i have:</p>
