--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <div style="display: flex; justify-content: center; align-items: center; ">
         <div style="width: 1200px; background-size: 100% auto; background-position: center; background-image: url('img/vjqtg70gay4a1.png'); background-size: cover; background-position: center;">
+            <div style="width: 1200px; background-color: rgba(247, 95, 255, 0.91); margin: 20px; padding: 10px; border: 3px solid; ">
+                <h1>hiii! &#60;3 welcome to my super dope website</h1>
+            </div>
+
             <div style="display: table;">
                 <div style="display: table-row">
                     <div style="width: 500px; display: table-cell;">
@@ -40,7 +44,7 @@
                             <p>im a lil queer :3</p>
                             <p>today i watched The Italian Job and i really liked it.</p>
                             <p>is this how myspace looked like back in the stone age</p>
-                            <p>ronal reagan should kill himself</p>
+                            <p>ronal reagan should kill himself. everyone i dont like should kill themselves or be publicly executed (i am the ethics master btw)</p>
                         </div>
                         <div style="background-color: rgba(249, 129, 255, 0.786); margin: 20px; padding: 10px; border: 3px solid; ">
                             <p>here are some cool pictures i have:</p>
